feat(jvmlog): ZGC per-cycle stats (live set, garbage) from [gc,stats] tag
New zgc-stats.yaml patterns:
- zgc_stats_mark_start: used bytes at Mark Start
- zgc_stats_mark_end: used bytes at Mark End
- zgc_stats_relocate_start: live and garbage bytes at Relocate Start
- zgc_stats_relocate_end: used bytes at Relocate End

New view:
- jvmlog-zgc-stats: per-cycle pivot showing all four phase boundaries with
  live set and garbage in MB — essential for understanding ZGC heap occupancy

Template: new zgc-stats cell in ZGC section (requires has-zgc-stats)